<resources>

    <string name="add">Add</string>
    <string name="app_name">MetAt</string>
    <string name="back">Back</string>
    <string name="browse">Browse</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="contact">Contact</string>
    <string name="contact_icon">Contact Icon</string>
    <string name="contacts">Contacts</string>
    <string name="delete">Delete</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="downloading_your_groups">Downloading your groups</string>
    <string name="edit">Edit</string>
    <string name="email">E-mail</string>
    <string name="email_address">E-mail Address</string>
    <string name="email_using">E-mail using:</string>
    <string name="im_sure_i_want_to_remove_this_person">I\'m sure I want to remove this person</string>
    <string name="introduction">Introduction</string>
    <string name="dont_remove_them">Don\'t remove them</string>
    <string name="loading">Loading</string>
    <string name="log_into_meetup">Log into Meetup</string>
    <string name="log_out_of_meetup">Log out of Meetup</string>
    <string name="meetups">Meetups</string>
    <string name="met_at">Met at</string>
    <string name="met_at_feedback">Met At Feedback</string>
    <string name="name">Name</string>
    <string name="notes">Notes</string>
    <string name="people">People</string>
    <string name="person">Person</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="refresh_meetup_groups">Refresh Meetup Groups</string>
    <string name="save">Save</string>
    <string name="send_feedback_using">Send feedback using:</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="updating_group_contacts">Updating group contacts</string>
    <string name="website">Website</string>
    <string name="welcome_to_met_at">Welcome to Met At</string>
    <string name="welcome_message">Met At is an app that helps you remember the people you\'ve met at Meetups.\n\r\n\rAll you need to do to get started is log into Meetup. Doing so will download and sync all your groups to the app.\n\r\n\rBe aware, the first sync could take a short amount of time.</string>
    <string name="you_need_to_provide_a_name">You need to provide a name</string>

</resources>