<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	style="@style/MainBackgroud">
	<ScrollView 
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:orientation="vertical">
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
			style="@style/ContactDetailsContainer">
			<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
				style="@style/ContactDetailsInputContainer"
				android:background="@drawable/contact_detail_full">
			    <AutoCompleteTextView 
					android:id="@+id/name" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:hint="@string/name"
			        android:inputType="text"
					style="@style/ContactDetailInput"
					android:layout_marginBottom="5dp"
					android:background="@drawable/textbox" />
			    <EditText 
					android:id="@+id/email" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:hint="@string/email_address"
					style="@style/ContactDetailInput"
					android:background="@drawable/textbox"
    				android:inputType="textEmailAddress" 
					android:layout_marginBottom="5dp" />
			    <EditText 
					android:id="@+id/phone" 
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:hint="@string/phone_number"
					style="@style/ContactDetailInput"
    				android:inputType="phone"
					android:background="@drawable/textbox"
					android:layout_marginBottom="5dp" />
			    <EditText
			        android:id="@+id/notes"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
					android:hint="@string/notes"
				   	android:inputType="textMultiLine"
					style="@style/ContactDetailInput"
					android:background="@drawable/textbox" />
		   </LinearLayout>
	   </LinearLayout>
   </ScrollView>
</LinearLayout>